logs/tikatko.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/gillcup'...
Listing './lib/python3.5/site-packages/gillcup/test'...
Listing './lib/python3.5/site-packages/gillcup-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/gillcup_graphics'...
Listing './lib/python3.5/site-packages/gillcup_graphics/offscreen'...
Listing './lib/python3.5/site-packages/gillcup_graphics/test'...
Compiling './lib/python3.5/site-packages/gillcup_graphics/test/test_transformation.py'...
***   File "./lib/python3.5/site-packages/gillcup_graphics/test/test_transformation.py", line 19
    print a_seq, b_seq
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/gillcup_graphics-0.2.0a1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyglet'...
Compiling './lib/python3.5/site-packages/pyglet/__init__.py'...
***   File "./lib/python3.5/site-packages/pyglet/__init__.py", line 249
    print '%s%s %s' % (indent, name, location)
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyglet/app'...
Compiling './lib/python3.5/site-packages/pyglet/clock.py'...
***   File "./lib/python3.5/site-packages/pyglet/clock.py", line 933
    print 'Testing %f FPS for %f seconds...' % (test_fps, test_seconds)
                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyglet/font'...
Compiling './lib/python3.5/site-packages/pyglet/font/freetype_lib.py'...
***   File "./lib/python3.5/site-packages/pyglet/font/freetype_lib.py", line 55
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyglet/gl'...
Compiling './lib/python3.5/site-packages/pyglet/gl/__init__.py'...
***   File "./lib/python3.5/site-packages/pyglet/gl/__init__.py", line 437
    print '%d (+%d)' % (_debug_texture_total, size)
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyglet/gl/lib.py'...
***   File "./lib/python3.5/site-packages/pyglet/gl/lib.py", line 93
    print '%s(%s)' % (name, trace_args)
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyglet/gl/lib_agl.py'...
***   File "./lib/python3.5/site-packages/pyglet/gl/lib_agl.py", line 60
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyglet/gl/lib_glx.py'...
***   File "./lib/python3.5/site-packages/pyglet/gl/lib_glx.py", line 68
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyglet/gl/lib_wgl.py'...
***   File "./lib/python3.5/site-packages/pyglet/gl/lib_wgl.py", line 104
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyglet/graphics'...
Compiling './lib/python3.5/site-packages/pyglet/graphics/__init__.py'...
***   File "./lib/python3.5/site-packages/pyglet/graphics/__init__.py", line 509
    print indent, 'Begin group', group
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyglet/graphics/allocation.py'...
***   File "./lib/python3.5/site-packages/pyglet/graphics/allocation.py", line 224
    print zip(self.starts, self.sizes)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyglet/graphics/vertexdomain.py'...
***   File "./lib/python3.5/site-packages/pyglet/graphics/vertexdomain.py", line 220
    except allocation.AllocatorMemoryException, e:
                                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyglet/image'...
Compiling './lib/python3.5/site-packages/pyglet/image/__init__.py'...
***   File "./lib/python3.5/site-packages/pyglet/image/__init__.py", line 188
    except codecs.ImageDecodeException, e:
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyglet/image/codecs'...
Compiling './lib/python3.5/site-packages/pyglet/image/codecs/dds.py'...
***   File "./lib/python3.5/site-packages/pyglet/image/codecs/dds.py", line 154
    print 'GL error %d' % e
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyglet/image/codecs/gif.py'...
***   File "./lib/python3.5/site-packages/pyglet/image/codecs/gif.py", line 118
    print block_type
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyglet/image/codecs/pil.py'...
***   File "./lib/python3.5/site-packages/pyglet/image/codecs/pil.py", line 58
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyglet/image/codecs/png.py'...
***   File "./lib/python3.5/site-packages/pyglet/image/codecs/png.py", line 57
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyglet/image/codecs/pypng.py'...
***   File "./lib/python3.5/site-packages/pyglet/image/codecs/pypng.py", line 728
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyglet/info.py'...
***   File "./lib/python3.5/site-packages/pyglet/info.py", line 53
    print heading
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyglet/lib.py'...
***   File "./lib/python3.5/site-packages/pyglet/lib.py", line 73
    print library
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyglet/media'...
Compiling './lib/python3.5/site-packages/pyglet/media/__init__.py'...
***   File "./lib/python3.5/site-packages/pyglet/media/__init__.py", line 946
    print '%r underrun: reducing update period to %.2f' % \
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyglet/media/drivers'...
Listing './lib/python3.5/site-packages/pyglet/media/drivers/alsa'...
Listing './lib/python3.5/site-packages/pyglet/media/drivers/directsound'...
Listing './lib/python3.5/site-packages/pyglet/media/drivers/openal'...
Listing './lib/python3.5/site-packages/pyglet/text'...
Listing './lib/python3.5/site-packages/pyglet/text/formats'...
Compiling './lib/python3.5/site-packages/pyglet/text/formats/structured.py'...
***   File "./lib/python3.5/site-packages/pyglet/text/formats/structured.py", line 77
    raise ValueError, "Argument must be between 1 and 3999"
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyglet/window'...
Listing './lib/python3.5/site-packages/pyglet/window/carbon'...
Listing './lib/python3.5/site-packages/pyglet/window/win32'...
Compiling './lib/python3.5/site-packages/pyglet/window/win32/constants.py'...
***   File "./lib/python3.5/site-packages/pyglet/window/win32/constants.py", line 564
    MB_TOPMOST = 262144L
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyglet/window/xlib'...
Compiling './lib/python3.5/site-packages/pyglet/window/xlib/__init__.py'...
***   File "./lib/python3.5/site-packages/pyglet/window/xlib/__init__.py", line 118
    print 'X11 error:', buf.value
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyglet/window/xlib/xlib.py'...
***   File "./lib/python3.5/site-packages/pyglet/window/xlib/xlib.py", line 407
    True = 1 	# /usr/include/X11/Xlib.h:112
             	                            ^
SyntaxError: can't assign to keyword

Listing './lib/python3.5/site-packages/pyglet-1.1.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tikatko-0.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
